# two-clusters-kuramoto

./: .gitignore  README.md  pyproject.toml
tests/: test_imports.py
two_clusters_kuramoto/: SeriesCheck.ipynb  notebook.ipynb  some_script.py
two_clusters_kuramoto/limit_cycles_search/: README.md  calc_line.py  clog.py  config.py  draw.py  draw_map.py  existance_zones.py  existanse_zones.py  find_initial_point.py  l_c_main.py  lc_and_stability.sh  main.py  param_update_politics.py  rside.py  s_main.py  stat_main.py  stats.sh  test_cl.py  tricommy_curve.py  tricommy_curve_inv_0_to_1_h_0.01.pickle
two_clusters_kuramoto/limit_cycles_search/existance_zones/: existance_zones.py  tricommy_curve.py
