[tool.poetry]
name = "two_clusters_kuramoto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
sympy = "^1.9"
numpy = ">=1.18,<1.22"
scipy = "^1.7.3"
notebook = "^6.4.8"
numba = "^0.55.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
some_script = "two_clusters_kuramoto.some_script:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
